--- a/settings.json
+++ b/settings.json
@@ -1,3 +1,5 @@
 {
-    "files.autoSave": "afterDelay"
+    "files.autoSave": "afterDelay",
+    "editor.detectIndentation": false,
+    "editor.insertSpaces": false
 }
