--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,6 @@
 {
     "files.autoSave": "afterDelay",
     "editor.detectIndentation": false,
-    "editor.insertSpaces": false
+	"editor.insertSpaces": false,
+	"editor.minimap.enabled": false
 }
