--- a/settings.json
+++ b/settings.json
@@ -4,5 +4,7 @@
 	"editor.insertSpaces": false,
 	"editor.minimap.enabled": false,
 	"editor.wordWrap": "on",
-	"workbench.colorTheme": "Downpour Contrast (rainglow)"
+	"workbench.colorTheme": "Downpour Contrast (rainglow)",
+	"workbench.iconTheme": "vscode-great-icons",
+	"workbench.tree.indent": 30
 }
